--- a/app/src/main/res/layout/activity_main_cam.xml
+++ b/app/src/main/res/layout/activity_main_cam.xml
@@ -42,8 +42,8 @@
 
             <com.facebook.drawee.view.DraweeView
                 android:id="@+id/sdvImage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:screenOrientation="landscape" />
 
             <RelativeLayout
