--- a/app/src/main/res/layout/activity_main_cam.xml
+++ b/app/src/main/res/layout/activity_main_cam.xml
@@ -52,8 +52,8 @@
 
                 <ImageButton
                     android:id="@+id/okButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginEnd="18dp"
                     android:layout_marginTop="13dp"
@@ -61,9 +61,21 @@
                     fresco:srcCompat="@mipmap/ic_ok" />
 
                 <ImageButton
-                    android:id="@+id/cancelButton"
+                    android:id="@+id/cropBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="20dp"
+                    android:background="?android:attr/selectableItemBackground"
+                    android:cropToPadding="false"
+                    android:elevation="0dp"
+                    fresco:srcCompat="@mipmap/ic_4x" />
+
+                <ImageButton
+                    android:id="@+id/cancelButton"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginBottom="12dp"
